// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Accordeon /> with \`as\` prop matches with snapshot 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: border-box;
  min-width: 12.5rem;
  min-height: 3.125rem;
  padding: 0 1.875rem;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  color: #222;
  line-height: 1.3;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  -webkit-appareance: none;
  -moz-appareance: none;
  appareance: none;
  outline: none;
  border: 0.125rem solid #eee;
  background-color: #fff;
  color: #222;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c0 >:nth-child(n) {
  margin-right: 0.625rem;
  text-align: left;
}

.c0 >:last-child {
  margin-right: 0;
}

.c0 svg {
  fill: #222;
}

.c0:hover,
.c0:focus,
.c0:active {
  border-color: #19b4fa;
  background-color: #19b4fa;
  color: #fff;
}

.c0:hover svg,
.c0:focus svg,
.c0:active svg {
  fill: #fff;
}

.c0:disabled {
  background-color: #d8d8d8;
}

<input
  className="c0"
  type="submit"
  value="MyButton"
/>
`;

exports[`<Accordeon /> with \`big\` prop matches with snapshot 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: border-box;
  min-width: 12.5rem;
  min-height: 3.125rem;
  padding: 0 1.875rem;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  color: #222;
  line-height: 1.3;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  -webkit-appareance: none;
  -moz-appareance: none;
  appareance: none;
  outline: none;
  min-width: 13.75rem;
  min-height: 4.375rem;
  padding: 0 2.5rem;
  font-size: 1rem;
  border: 0.125rem solid #eee;
  background-color: #fff;
  color: #222;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c0 >:nth-child(n) {
  margin-right: 0.625rem;
  text-align: left;
}

.c0 >:last-child {
  margin-right: 0;
}

.c0 svg {
  fill: #222;
}

.c0:hover,
.c0:focus,
.c0:active {
  border-color: #19b4fa;
  background-color: #19b4fa;
  color: #fff;
}

.c0:hover svg,
.c0:focus svg,
.c0:active svg {
  fill: #fff;
}

.c0:disabled {
  background-color: #d8d8d8;
}

<button
  className="c0"
>
  MyButton
</button>
`;

exports[`<Accordeon /> with \`fluid\` prop matches with snapshot 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: border-box;
  min-width: 12.5rem;
  min-height: 3.125rem;
  padding: 0 1.875rem;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  color: #222;
  line-height: 1.3;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  -webkit-appareance: none;
  -moz-appareance: none;
  appareance: none;
  outline: none;
  min-width: initial;
  width: 100%;
  border: 0.125rem solid #eee;
  background-color: #fff;
  color: #222;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c0 >:nth-child(n) {
  margin-right: 0.625rem;
  text-align: left;
}

.c0 >:last-child {
  margin-right: 0;
}

.c0 svg {
  fill: #222;
}

.c0:hover,
.c0:focus,
.c0:active {
  border-color: #19b4fa;
  background-color: #19b4fa;
  color: #fff;
}

.c0:hover svg,
.c0:focus svg,
.c0:active svg {
  fill: #fff;
}

.c0:disabled {
  background-color: #d8d8d8;
}

<button
  className="c0"
>
  MyButton
</button>
`;

exports[`<Accordeon /> with \`modifier\` prop matches with snapshot 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: border-box;
  min-width: 12.5rem;
  min-height: 3.125rem;
  padding: 0 1.875rem;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  color: #222;
  line-height: 1.3;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  -webkit-appareance: none;
  -moz-appareance: none;
  appareance: none;
  outline: none;
  border: 0.125rem dashed #bae8fd;
  background-color: #fff;
  color: #19b4fa;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c0 >:nth-child(n) {
  margin-right: 0.625rem;
  text-align: left;
}

.c0 >:last-child {
  margin-right: 0;
}

.c0 svg {
  fill: #19b4fa;
}

.c0:hover,
.c0:focus,
.c0:active {
  border-color: #19b4fa;
  background-color: #19b4fa;
  color: #fff;
}

.c0:hover svg,
.c0:focus svg,
.c0:active svg {
  fill: #fff;
}

.c0:disabled {
  background-color: #d8d8d8;
}

<button
  className="c0"
>
  MyButton
</button>
`;

exports[`<Accordeon /> with \`tiny\` prop matches with snapshot 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: border-box;
  min-width: 12.5rem;
  min-height: 3.125rem;
  padding: 0 1.875rem;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  color: #222;
  line-height: 1.3;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  -webkit-appareance: none;
  -moz-appareance: none;
  appareance: none;
  outline: none;
  min-width: 10rem;
  min-height: 2.5rem;
  padding: 0 1.25rem;
  border: 0.125rem solid #eee;
  background-color: #fff;
  color: #222;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c0 >:nth-child(n) {
  margin-right: 0.625rem;
  text-align: left;
}

.c0 >:last-child {
  margin-right: 0;
}

.c0 svg {
  fill: #222;
}

.c0:hover,
.c0:focus,
.c0:active {
  border-color: #19b4fa;
  background-color: #19b4fa;
  color: #fff;
}

.c0:hover svg,
.c0:focus svg,
.c0:active svg {
  fill: #fff;
}

.c0:disabled {
  background-color: #d8d8d8;
}

<button
  className="c0"
>
  MyButton
</button>
`;

exports[`<Accordeon /> with icon matches with snapshot 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: border-box;
  min-width: 12.5rem;
  min-height: 3.125rem;
  padding: 0 1.875rem;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  color: #222;
  line-height: 1.3;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  -webkit-appareance: none;
  -moz-appareance: none;
  appareance: none;
  outline: none;
  min-width: initial;
  min-height: initial;
  width: 3.125rem;
  height: 3.125rem;
  padding: 0;
  border: 0.125rem solid #eee;
  background-color: #fff;
  color: #222;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c0 >:nth-child(n) {
  margin-right: 0.625rem;
  text-align: left;
}

.c0 >:last-child {
  margin-right: 0;
}

.c0 svg {
  fill: #222;
}

.c0:hover,
.c0:focus,
.c0:active {
  border-color: #19b4fa;
  background-color: #19b4fa;
  color: #fff;
}

.c0:hover svg,
.c0:focus svg,
.c0:active svg {
  fill: #fff;
}

.c0:disabled {
  background-color: #d8d8d8;
}

<button
  className="c0"
>
  !
</button>
`;

exports[`<Accordeon /> with some elements matches with snapshot 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: border-box;
  min-width: 12.5rem;
  min-height: 3.125rem;
  padding: 0 1.875rem;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  color: #222;
  line-height: 1.3;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  -webkit-appareance: none;
  -moz-appareance: none;
  appareance: none;
  outline: none;
  border: 0.125rem solid #eee;
  background-color: #fff;
  color: #222;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c0 >:nth-child(n) {
  margin-right: 0.625rem;
  text-align: left;
}

.c0 >:last-child {
  margin-right: 0;
}

.c0 svg {
  fill: #222;
}

.c0:hover,
.c0:focus,
.c0:active {
  border-color: #19b4fa;
  background-color: #19b4fa;
  color: #fff;
}

.c0:hover svg,
.c0:focus svg,
.c0:active svg {
  fill: #fff;
}

.c0:disabled {
  background-color: #d8d8d8;
}

<button
  className="c0"
>
  <span>
    My
  </span>
  <span>
    Button
  </span>
</button>
`;

exports[`<Accordeon /> with text matches with snapshot 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  box-sizing: border-box;
  min-width: 12.5rem;
  min-height: 3.125rem;
  padding: 0 1.875rem;
  font-family: Maax,Helvetica,Arial,sans-serif;
  font-weight: 500;
  font-size: 0.875rem;
  color: #222;
  line-height: 1.3;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  -webkit-appareance: none;
  -moz-appareance: none;
  appareance: none;
  outline: none;
  border: 0.125rem solid #eee;
  background-color: #fff;
  color: #222;
  -webkit-transition: background-color 0.2s,color 0.2s,border-color 0.2s;
  transition: background-color 0.2s,color 0.2s,border-color 0.2s;
}

.c0 >:nth-child(n) {
  margin-right: 0.625rem;
  text-align: left;
}

.c0 >:last-child {
  margin-right: 0;
}

.c0 svg {
  fill: #222;
}

.c0:hover,
.c0:focus,
.c0:active {
  border-color: #19b4fa;
  background-color: #19b4fa;
  color: #fff;
}

.c0:hover svg,
.c0:focus svg,
.c0:active svg {
  fill: #fff;
}

.c0:disabled {
  background-color: #d8d8d8;
}

<button
  className="c0"
>
  MyButton
</button>
`;
